--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
 
 
-        <div class="question-container">
+        <div class="main-container question-container">
             <h2 id="question"></h2>
         </div>
-        <div class="answer-container">
-            <h3 class="answer"></h3>
-            <h3 class="answer"></h3>
-            <h3 class="answer"></h3>
-            <h3 class="answer"></h3>
+        <div class="main-container answer-container">
+            <h3 class="answer" id="answer-a"></h3>
+            <h3 class="answer" id="answer-b"></h3>
+            <h3 class="answer" id="answer-c"></h3>
+            <h3 class="answer" id="answer-d"></h3>
         </div>
 
 
