Able to move through each question, added some questions to test with

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="btn" id="view-highscores">View HighScores</button>
             </div>
             <div class="time-container">
-                <h2 id="timer">Timer: </h2>
+                <h2 id="timer"></h2>
             </div>
         </nav>
     </header>
@@ -36,11 +36,12 @@
             <h2 id="question"></h2>
         </div>
         <div class="main-container answer-container">
-            <h3 class="answer" id="answer-a"></h3>
-            <h3 class="answer" id="answer-b"></h3>
-            <h3 class="answer" id="answer-c"></h3>
-            <h3 class="answer" id="answer-d"></h3>
+            <h3 class="answer" answer-id="a" id="answer-a"></h3>
+            <h3 class="answer" answer-id="b" id="answer-b"></h3>
+            <h3 class="answer" answer-id="c" id="answer-c"></h3>
+            <h3 class="answer" answer-id="d" id="answer-d"></h3>
         </div>
+        <h4 id="answer-result"></h4>
 
 
 
