adding highscore saving functionality

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
         </div>
         <h4 id="answer-result"></h4>
 
+        <div class="main-container highScore-container">
+            <h2 id="final-score"></h2>
+            <p>Consider adding your score to the HighScores board by typing your initials below and clicking Ok.</p>
+            <form class="initials-form">
+                <label for="initials-input">Enter your initials: </label>
+                <input type="text" id="initials-input" name="initials-input">
+                <button class="btn" id="highScore-btn" type="submit">Ok</button>
+            </form>
+            <ul
+        </div>
+
 
 
     </main>
