fixed the scores bug so they will only display after click save score

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <div class="main-container highScore-container">
             <div class="score-container">
                 <h2 id="final-score"></h2>
-                <p id="final-information">Consider adding your score to the HighScores board by typing your initials
-                    below.</p>
+                <p id="final-information"></p>
                 <form class="initials-form">
                     <label for="initials-input">Enter your initials: </label>
                     <input type="text" id="initials-input" name="initials-input">
@@ -55,11 +54,11 @@
                 </form>
             </div>
 
-            <div class="main-container button-container">
-                <button class="btn" id="quiz-btn">Take Quiz</button>
-                <button class="btn" id="clear-btn">Clear Scores</button>
-            </div>
+        </div>
 
+        <div class="main-container button-container">
+            <button class="btn" id="quiz-btn">Take Quiz</button>
+            <button class="btn" id="clear-btn">Clear Scores</button>
         </div>
 
 
